# clippy

./: .gitignore  Cargo.toml  README.md  clippy_daemon.service  linux_install.sh  main.py  windows_install.ps1
src/: app.rs  clipboard.rs  main.rs  ui.rs
