[package]
name = "clippy"
version = "0.1.0"
edition = "2021"
authors = ["Rayan rayan13170@protonmail.com"]
license = "MIT"

[[bin]]
name = "daemon"
path = "src/bin/daemon/main.rs"

[[bin]]
name = "ui"
path = "src/bin/ui/main.rs"

[dependencies]
anyhow = "1.0.97"
arboard = "3.4.1"
confy = "0.6.1"
eframe = "0.31.1"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
